release-note/1.4.2-beta2/sv_SE.md
## [1.4.2-beta2]
### Fixed
- Fasta problem med GPU -förare kompatibilitet
- Problem med säkerhetsfel med stora säkerhetskopieringsfiler
- Optimerad säkerhetskopiering av säkerhetskopiering
- Optimerad instrumentpanel -appvisningshastighet
- Fixed Docker.io Bild Pull Failure Issue
- Fasta visningsavvikelser från vissa NVME -skivor
- Felmagen om raidmontering orsakar misslyckad montering
- Fixat sökfel som orsakade massiva problem med slinganordningen

## [1.4.2-beta1]
### New
- Den nya säkerhetskopieringsfunktionen är nu tillgänglig, vilket stödjer säkerhetskopiering mellan nätverksskiva, LAN -lagring, USB -lagring och Zima -enheter
- När du skapar lagringsutrymme stöds nu JBOD och RAID6 och ett nytt lagringsgränssnitt är tillgängligt
- I inställningarna panelen läggs visningen av systeminformation
- Tips visas när appen öppnas och vissa appar uppmanar kontolösenordet
- Stöd SSL -certifikat för bättre åtkomstsäkerhet
### Fixed
- Fixade problemet där gränssnittet fortfarande visar pågående expansion efter att utvidgningen är klar
- Applikation Nedladdning Optimering och fixar
- Intelligent proxy med hög tillgänglighet: växlar och försöker automatiskt transparenta spegelproxyer utan att ändra konfiguration, vilket möjliggör smidig bild att dra i olika nätverk - miljöer och avsevärt förbättra tillgängligheten och ladda ner framgångsgrader för globala användare
- Optimerad program för nedladdning av applikationer och förbättrad övergripande nedladdningsupplevelse
- Betydligt förbättrad nedladdningshastighet
- Fixat felaktigt problem med framstegsfältet, vilket gör framstegen visar mer exakt
- Optimerad applikationsstarttid efter omstart av enheter
- Optimerad applikationsuppdateringskontrollmekanism och förbättrad tillgänglighet för applikationsuppdatering
- Problem med fixade diskvisningar på olika enheter
- Optimerad indexresursförbrukning
- Förbättrad tillgänglighet av AI -sökfunktioner
- Fixade molnmonteringsfel eller visningsproblem efter montering efter montering
- Problem med oförmåga att avmontera molndrivningar
- Fast Zimaos-HD delas inte ordentligt efter initialiseringen
- Fast oförmåga att välja nya hårddiskar i samma diskplatser när du återhämtar Raid
- Fixade problemet där filer som innehåller olagliga tecken inte kunde laddas upp när macOS monteras zimaos via SMB.
- Optimerad teckenkodningshanteringsmekanism stöder nu normal uppladdning av filer som innehåller specialtecken.
### Tips
- Om du hittar några programvaruproblem, välkommen att gå med i oenighet och få stöd från 28 000 Zima -medlemmar
- <a href = "https://zimaboard.com/discord" target = "_ blank" style = "color: blue"> https://zimaboard.com/discord </a>
